--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
+    "node-fetch": "^2.6.7",
     "express": "^5.2.1",
     "mongoose": "^9.2.1",
     "nodemon": "^3.1.11",
